fix(index): make title align

--- a/index.css
+++ b/index.css
@@ -8,8 +8,13 @@ body {
     background: radial-gradient(circle, #e9e4e1, #dbdce0) fixed;
 }
 
+.index {
+    text-align: center;
+    vertical-align: middle;
+}
+
 .index h3 {
     color: #6faaae;
     font-family: Fzdykt;
-    font-size: 2em;
+    font-size: 3em;
 }
